<resources>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="_1">1</string>
    <string name="_12_25">$12.25</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_3_days">3 Days</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_59_99">$59.99</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_8_22">$8.22</string>
    <string name="_9">9</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_link">https://www.google.com</string>
    <string name="admob_app_id">ca-app-pub-3009244752675153~3637039249</string>
    <string name="admob_banner_ai_ids">ca-app-pub-3009244752675153/4873675859</string>
    <string name="admob_banner_conversion_ids">ca-app-pub-3009244752675153/9108378493</string>
    <string name="admob_banner_home_ids">ca-app-pub-3009244752675153/7834127176</string>
    <string name="admob_interstitial_counter_ids">ca-app-pub-3009244752675153/5840758342</string>
    <string name="admob_interstitial_menu_ids">ca-app-pub-3009244752675153/9442642109</string>
    <string name="admob_interstitial_solution_ids">ca-app-pub-3009244752675153/9695796737</string>
    <string name="admob_interstitial_splash_ids">ca-app-pub-3009244752675153/2859371785</string>
    <string name="admob_interstitial_tutorial_ids">ca-app-pub-3009244752675153/7536983391</string>
    <string name="admob_native_conversion_ids">ca-app-pub-3009244752675153/5997083703</string>
    <string name="admob_native_exit_ids">ca-app-pub-3009244752675153/5067145415</string>
    <string name="admob_native_history_ids">ca-app-pub-3009244752675153/5621266495</string>
    <string name="admob_native_home_ids">ca-app-pub-3009244752675153/8957876277</string>
    <string name="admob_native_menu_ids">ca-app-pub-3009244752675153/9943654882</string>
    <string name="admob_native_solution_ids">ca-app-pub-3009244752675153/9846225571</string>
    <string name="admob_native_splash_ids">ca-app-pub-3009244752675153/8764065463</string>
    <string name="admob_open_app_ids">ca-app-pub-3009244752675153/2915212102</string>
    <string name="ads_free_experience">Ads Free Experience</string>
    <string name="ai_is_getting_equation">AI is getting equation…</string>
    <string name="ai_is_solving_equation">AI is solving equation…</string>
    <string name="ai_math">AI Math</string>
    <string name="ai_math_calculator">AI Math Calculator</string>
    <string name="allclear">AC</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_crashes_amp_anr">App Crashes &amp; ANR</string>
    <string name="app_email">pacificapps4@gmail.com</string>
    <string name="app_name">Calculator</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="are_you_satisfied_with_the_service">Are you Satisfied with the Service?</string>
    <string name="are_you_sure_you_want_to_clear_all">Are you sure you want to clear all?</string>
    <string name="are_you_sure_you_want_to_delete_all">Are you sure you want to delete all?</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="area">Area</string>
    <string name="area_conversion">Area Conversion</string>
    <string name="avail_this_offer">Avail This Offer</string>
    <string name="backspace">⌫</string>
    <string name="basic">Basic</string>
    <string name="basic_scientific_amp_conversions_calculator">Basic, Scientific &amp; Conversions Calculator</string>
    <string name="best_value">Best Value</string>
    <string name="bottomSheetContent1">"Customize your ad experience with our Personalized Ads Setting to minimize inappropriate content. We work with third-party advertising agencies, clearly marking ads as such, to sustain our services. Click the button below to tailor your ad preferences for more valuable information. 

Concerned about privacy? Your security is a priority. Our partners may show you relevant ads based on your interests, but rest assured, we don't collect or use any personally identifiable information. Enjoy using our app anonymously."</string>
    <string name="bottomSheetContent2">"To enable personalized advertising, third-party advertising SDKs may automatically gather and share the following de-identified and anonymized data: 

"<b>User product interactions: </b>" This includes information about interactions with products, such as app launches, taps, and video views. 

"<b>Diagnostic information:</b>" Collection of data related to app and SDK performance, encompassing crash logs, app launch time, hang rate, and energy usage. 

"<b>IP address</b>": Gathering the device's IP address to estimate its general location. 

"<b>Device and account identifiers</b>": Collection of identifiers like Android advertising (ad) ID, app set ID, and other relevant identifiers associated with signed-in accounts on the device. 

Feel free to click on "<b>Manage options</b>" to have control over and customize these settings. "</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bracket">()</string>
    <string name="brackets">()</string>
    <string name="buy_now">Buy Now</string>
    <string name="calculator">Calculator</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_gpt_encrpted_id">3gxnfmLuSXqu0KKe8QqpxJv9GTtgQq5R4SwTFyy72teNr65yk5vnK1amegnyN/qri6y2L8Jg2aaAifjoZs7oxw==</string>
    <string name="chat_gpt_key">wLl4Y1BAPTwH5sY8</string>
    <string name="choose_the_language">Select Languages</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">76b811439d48499f8fe061d71d3296a0</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="facing_ads">Facing ads</string>
    <string name="failed_due_to_some_error_occurred_please_try_again">Failed due to some error occurred. Please try again.</string>
    <string name="feedback">Feedback</string>
    <string name="language">Language</string>
    <string name="light">Light</string>
    <string name="no_internet">No Internet!</string>
    <string name="other">Other</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again.</string>
    <string name="premium">Premium</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="share_your_thoughts">Share your thoughts…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="speed_amp_efficiency">Speed &amp; efficiency</string>
    <string name="submit">Submit</string>
    <string name="system_defined">System Defined</string>
    <string name="tell_us_what_can_be_improved">Tell us what can be improved?</string>
    <string name="theme">Theme</string>
    <string name="theme_cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="yes">Yes</string>
</resources>