<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:tag="layout/fragment_feed_back_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/_15sdp" android:textStyle="bold" android:textColor="@color/equal_btn_bg" android:gravity="center" android:id="@id/title_tv" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_marginTop="@dimen/_20sdp" android:text="@string/feedback" android:fontFamily="@font/roboto" android:layout_marginStart="@dimen/_10sdp" app:layout_constraintStart_toEndOf="@id/conversion_iv" app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.imageview.ShapeableImageView android:id="@id/conversion_iv" android:padding="@dimen/_5sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:src="@drawable/ic_nav_back_home" android:layout_marginStart="@dimen/_10sdp" android:layout_marginEnd="@dimen/_5sdp" app:layout_constraintBottom_toBottomOf="@id/title_tv" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/feedback_cl" android:background="@drawable/feedback_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_20sdp" android:layout_marginHorizontal="@dimen/_20sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_tv">
            <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_15sdp" android:textColor="@color/text_color" android:id="@id/feedback_tv3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:text="@string/tell_us_what_can_be_improved" android:fontFamily="@font/roboto" android:layout_marginStart="@dimen/_15sdp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout android:orientation="vertical" android:id="@id/check_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_20sdp" android:layout_marginBottom="@dimen/_10sdp" android:layout_marginHorizontal="@dimen/_20sdp" android:layout_marginVertical="@dimen/_10sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/feedback_tv3">
                <CheckBox android:textColor="@color/text_color" android:id="@id/checkBoxOption1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/speed_amp_efficiency" android:fontFamily="@font/roboto" android:buttonTint="@color/feed_selected" />
                <CheckBox android:textColor="@color/text_color" android:id="@id/checkBoxOption2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/facing_ads" android:fontFamily="@font/roboto" android:buttonTint="@color/feed_selected" />
                <CheckBox android:textColor="@color/text_color" android:id="@id/checkBoxOption3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_crashes_amp_anr" android:fontFamily="@font/roboto" android:buttonTint="@color/feed_selected" />
                <CheckBox android:textColor="@color/text_color" android:id="@id/checkBoxOption4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other" android:fontFamily="@font/roboto" android:buttonTint="@color/feed_selected" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/_12sdp" android:textColor="@color/text_color" android:gravity="start|top" android:id="@id/thoughts_et" android:background="@drawable/comments_bg" android:paddingTop="@dimen/_5sdp" android:layout_width="fill_parent" android:layout_height="@dimen/_150sdp" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_marginRight="@dimen/_20sdp" android:layout_marginBottom="@dimen/_12sdp" android:hint="@string/share_your_thoughts" android:inputType="textMultiLine" android:paddingStart="@dimen/_10sdp" android:layout_marginHorizontal="@dimen/_20sdp" android:layout_marginVertical="@dimen/_12sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/check_group" app:layout_constraintVertical_bias="0.36" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/_20sdp" android:id="@id/submit_btn" android:paddingTop="@dimen/_8sdp" android:paddingBottom="@dimen/_8sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_20sdp" android:text="@string/submit" android:insetLeft="0.0dip" android:insetRight="0.0dip" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:textAllCaps="false" android:backgroundTint="@color/equal_btn_bg" android:layout_marginHorizontal="@dimen/_20sdp" android:paddingVertical="@dimen/_8sdp" app:cornerRadius="@dimen/_20sdp" app:layout_constraintEnd_toEndOf="@id/feedback_cl" app:layout_constraintHorizontal_bias="0.961" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/feedback_cl" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
