<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/theme_layout" android:tag="layout/dialog_theme_0" android:background="@drawable/theme_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_15sdp" android:textStyle="bold" android:textColor="@color/equal_btn_bg" android:id="@id/title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:layout_marginBottom="@dimen/_5sdp" android:text="@string/choose_theme" android:fontFamily="@font/plusjakartasans_bold" android:layout_marginVertical="@dimen/_5sdp" app:layout_constraintBottom_toTopOf="@id/radioGroup" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup android:id="@id/radioGroup" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_5sdp" android:layout_marginRight="@dimen/_5sdp" android:layout_marginHorizontal="@dimen/_5sdp" app:layout_constraintBottom_toTopOf="@id/cancel_tv" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_tv">
        <RadioButton android:textSize="@dimen/_15sdp" android:textColor="@color/text_color" android:textColorLink="#ff000000" android:id="@id/default_rb" android:background="@drawable/radio_bg" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_2sdp" android:layout_marginBottom="@dimen/_2sdp" android:text="@string/system_defined" android:fontFamily="@font/plusjakartasans_medium" android:paddingStart="@dimen/_5sdp" android:layout_marginVertical="@dimen/_2sdp" android:paddingVertical="@dimen/_10sdp" />
        <RadioButton android:textSize="@dimen/_15sdp" android:textColor="@color/text_color" android:textColorLink="#ff000000" android:id="@id/light_rb" android:background="@drawable/radio_bg" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_2sdp" android:layout_marginBottom="@dimen/_2sdp" android:text="@string/light" android:fontFamily="@font/plusjakartasans_medium" android:paddingStart="@dimen/_5sdp" android:layout_marginVertical="@dimen/_2sdp" android:paddingVertical="@dimen/_10sdp" />
        <RadioButton android:textSize="@dimen/_15sdp" android:textColor="@color/text_color" android:textColorLink="#ff000000" android:id="@id/dark_rb" android:background="@drawable/radio_bg" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_2sdp" android:layout_marginBottom="@dimen/_2sdp" android:text="@string/dark" android:fontFamily="@font/plusjakartasans_medium" android:paddingStart="@dimen/_5sdp" android:layout_marginVertical="@dimen/_2sdp" android:paddingVertical="@dimen/_10sdp" />
    </RadioGroup>
    <TextView android:textSize="@dimen/_15sdp" android:textColor="@color/exit_no_tv" android:ellipsize="end" android:gravity="center" android:id="@id/cancel_tv" android:paddingTop="@dimen/_7sdp" android:paddingBottom="@dimen/_7sdp" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="@dimen/_7sdp" android:text="@string/cancel" android:maxLines="1" android:fontFamily="@font/plusjakartasans_medium" android:backgroundTint="@color/white" android:letterSpacing="0.0" android:paddingVertical="@dimen/_7sdp" app:cornerRadius="@dimen/_7sdp" app:layout_constraintBottom_toBottomOf="@id/ok_btn" app:layout_constraintEnd_toStartOf="@id/ok_btn" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/ok_btn" />
    <com.google.android.material.button.MaterialButton android:textSize="@dimen/_15sdp" android:textColor="@color/equal_btn_tv" android:ellipsize="end" android:gravity="center" android:id="@id/ok_btn" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="@dimen/_120sdp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_marginBottom="@dimen/_10sdp" android:text="@string/apply" android:maxLines="1" android:insetLeft="0.0dip" android:insetRight="0.0dip" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:textAllCaps="false" android:fontFamily="@font/plusjakartasans_medium" android:backgroundTint="@color/equal_btn_bg" android:letterSpacing="0.0" android:layout_marginVertical="@dimen/_10sdp" android:paddingVertical="@dimen/_10sdp" app:cornerRadius="@dimen/_18sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/radioGroup" app:layout_constraintStart_toEndOf="@id/cancel_tv" app:layout_constraintTop_toBottomOf="@id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>
