<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/alert_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:backgroundTint="@null"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.imageview.ShapeableImageView android:id="@id/dialog_iv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:src="@drawable/ic_error" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView android:textSize="20.0sp" android:textColor="@color/try_tv_color" android:gravity="center" android:id="@id/error_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:layout_marginBottom="@dimen/_20sdp" android:text="@string/something_went_wrong" android:fontFamily="@font/poppins" android:layout_marginVertical="@dimen/_20sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dialog_iv" />
    <com.google.android.material.textview.MaterialTextView android:textSize="18.0sp" android:textColor="@color/text_color" android:gravity="center" android:id="@id/error_dis_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_20sdp" android:layout_marginBottom="@dimen/_10sdp" android:text="@string/failed_due_to_some_error_occurred_please_try_again" android:fontFamily="@font/poppins" android:layout_marginHorizontal="@dimen/_20sdp" android:layout_marginVertical="@dimen/_10sdp" app:layout_constraintBottom_toTopOf="@id/error_cancel_tv" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/error_title_tv" />
    <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_17sdp" android:textColor="@color/text_color" android:id="@id/error_cancel_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_10sdp" android:text="@string/cancel" android:fontFamily="@font/poppins" android:layout_marginStart="@dimen/_15sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@id/error_dis_tv" />
    <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_17sdp" android:textColor="@color/try_tv_color" android:id="@id/error_try_again_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_10sdp" android:text="@string/try_again" android:fontFamily="@font/poppins" android:layout_marginEnd="@dimen/_15sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/error_dis_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>
