<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:tag="layout/dialog_delete_math_0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardCornerRadius="@dimen/_10sdp" app:cardPreventCornerOverlap="true" app:strokeColor="@color/white"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:id="@id/dialogDelete" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/_17sdp" android:textColor="@color/history_tv" android:id="@id/title_tv" android:background="@color/equal_btn_bg" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/delete" android:textAlignment="viewStart" android:paddingStart="@dimen/_30sdp" android:paddingEnd="@dimen/_20sdp" android:paddingVertical="@dimen/_10sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/text_color" android:ellipsize="end" android:gravity="center" android:id="@id/discription_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:text="@string/are_you_sure_you_want_to_delete_this" android:maxLines="1" app:layout_constraintEnd_toEndOf="@id/ok_btn" app:layout_constraintStart_toStartOf="@id/cancel_btn" app:layout_constraintTop_toBottomOf="@id/title_tv" />
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/_15sdp" android:textColor="@color/exit_no_tv" android:ellipsize="end" android:id="@id/cancel_btn" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="@dimen/_5sdp" android:text="@string/theme_cancel" android:maxLines="1" android:insetLeft="0.0dip" android:insetRight="0.0dip" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:textAllCaps="false" android:backgroundTint="@color/white" app:cornerRadius="@dimen/_7sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/ok_btn" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/discription_tv" />
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/_15ssp" android:id="@id/ok_btn" android:layout_width="@dimen/_100sdp" android:layout_height="wrap_content" android:layout_margin="@dimen/_5sdp" android:text="@string/yes" android:insetLeft="0.0dip" android:insetRight="0.0dip" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:textAllCaps="false" android:backgroundTint="@color/equal_btn_bg" app:cornerRadius="@dimen/_7sdp" app:layout_constraintBottom_toBottomOf="@id/cancel_btn" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/cancel_btn" app:layout_constraintTop_toTopOf="@id/cancel_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
